samples/_failures_safe/1761265427_3df40b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9da3c258.c: In function ‘main’:
./samples/SAFE/__tmp_9da3c258.c:145:5: error: expected expression at end of input
  145 |     if (input_len > 0 && input_str[input_len -
      |     ^~
./samples/SAFE/__tmp_9da3c258.c:145:5: error: expected declaration or statement at end of input
